@@ -33,18 +33,16 @@ public class AvaliacaoRepositoryTest {
      */
     @Test
     public void testSalvar() {
-        Avaliacao avaliacao = new Avaliacao("123456789", 10, "Muito bom");
+        Avaliacao avaliacao = new Avaliacao("123456789", 5, "Muito bom");
         AvaliacaoRepository ar = new AvaliacaoRepository();
 
         ar.salvar(avaliacao);
         List<Avaliacao> avaliacoes = ar.listar();
 
-
         assertEquals(1, avaliacoes.size());
-        assertEquals("Muito bom", avaliacoes.getFirst().getComentario());
-        assertEquals(10, avaliacoes.get(0).getNota());
+        assertEquals("Muito bom", avaliacoes.get(0).getComentario());
+        assertEquals(5, avaliacoes.get(0).getNota());
     }
-
 
     /**
      * Testa remover uma instãncia de avaliação atraves do CPF.
@@ -52,7 +50,7 @@ public class AvaliacaoRepositoryTest {
     @Test
     public void testRemover() {
         Avaliacao avaliacao = new Avaliacao("987654321", 2, "Ruim");
-        Avaliacao avaliacao2 = new Avaliacao("987654312", 0, "Horrivel");
+        Avaliacao avaliacao2 = new Avaliacao("987654312", 1, "Horrivel");
         AvaliacaoRepository ar = new AvaliacaoRepository();
 
         ar.salvar(avaliacao);
@@ -69,7 +67,7 @@ public class AvaliacaoRepositoryTest {
     @Test
     void testRemoverPorCPFInvalido() {
         Avaliacao av = new Avaliacao("123456", 2, "||||||||");
-        Avaliacao av2 = new Avaliacao("654321", 10, "%%%%%%%%");
+        Avaliacao av2 = new Avaliacao("654321", 5, "%%%%%%%%"); // nota corrigida para valor válido
         AvaliacaoRepository ar = new AvaliacaoRepository();
 
         ar.salvar(av);
@@ -97,8 +95,8 @@ public class AvaliacaoRepositoryTest {
      */
     @Test
     void testListar() {
-        Avaliacao av = new Avaliacao("123456789", 9, "Bom");
-        Avaliacao av2 = new Avaliacao("987654321", 8, "Gostei");
+        Avaliacao av = new Avaliacao("123456789", 5, "Bom");
+        Avaliacao av2 = new Avaliacao("987654321", 4, "Gostei");
         AvaliacaoRepository ar = new AvaliacaoRepository();
 
         ar.salvar(av);
@@ -138,8 +136,8 @@ public class AvaliacaoRepositoryTest {
      */
     @Test
     void testBuscarInvalido() {
-        Avaliacao av = new Avaliacao("123", 10, "********");
-        Avaliacao av2 = new Avaliacao("567", 6, "--------");
+        Avaliacao av = new Avaliacao("123", 5, "********");
+        Avaliacao av2 = new Avaliacao("567", 4, "--------");
         AvaliacaoRepository ar = new AvaliacaoRepository();
 
         ar.salvar(av);
@@ -179,10 +177,10 @@ public class AvaliacaoRepositoryTest {
     void testAtualizarInvalido() {
         AvaliacaoRepository ar = new AvaliacaoRepository();
 
-        ar.salvar(new Avaliacao("88888", 10, "////////"));
-        ar.salvar(new Avaliacao("12345", 9, "########"));
+        ar.salvar(new Avaliacao("88888", 5, "////////"));
+        ar.salvar(new Avaliacao("12345", 4, "########"));
 
-        boolean result = ar.atualizar(new Avaliacao("1010101", 0,"++++++++"));
+        boolean result = ar.atualizar(new Avaliacao("1010101", 3,"++++++++"));
         assertFalse(result);
 
         assertEquals("88888", ar.listar().getFirst().getCompradorCpf());
@@ -197,8 +195,8 @@ public class AvaliacaoRepositoryTest {
         AvaliacaoRepository ar = new AvaliacaoRepository();
 
         ar.salvar(new Avaliacao("999", 3, "Ruim"));
-        ar.salvar(new Avaliacao("888", 6, "Mediano"));
-        ar.salvar(new Avaliacao("777", 8, "Bom"));
+        ar.salvar(new Avaliacao("888", 4, "Mediano"));
+        ar.salvar(new Avaliacao("777", 5, "Bom"));
 
 
         assertEquals(3, ar.listar().size());
